[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui_themes/buttons_for_paperbg.tres" type="Theme" id=1]
[ext_resource path="res://fonts/Alkhemikal.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/Inventory.gd" type="Script" id=3]
[ext_resource path="res://ui/ItemPreview.gd" type="Script" id=4]
[ext_resource path="res://images/ui/ui_paper.png" type="Texture" id=5]
[ext_resource path="res://images/ui/ui_teal.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 2 )

[node name="Inventory" type="NinePatchRect"]
margin_right = 1148.0
margin_bottom = 657.0
theme = ExtResource( 1 )
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItemList" type="ItemList" parent="."]
margin_left = 20.0
margin_top = 21.0
margin_right = 681.0
margin_bottom = 632.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPreview" type="NinePatchRect" parent="."]
margin_left = 719.0
margin_top = 16.0
margin_right = 1132.0
margin_bottom = 642.0
texture = ExtResource( 7 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionContainer" type="NinePatchRect" parent="ItemPreview"]
margin_left = 2.0
margin_top = 326.0
margin_right = 411.0
margin_bottom = 628.0
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="RichTextLabel" parent="ItemPreview"]
margin_left = 17.0
margin_top = 341.0
margin_right = 397.0
margin_bottom = 624.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.286275, 0.196078, 0.196078, 1 )
bbcode_enabled = true
bbcode_text = "This is an item of great renown, or something. Pretty sure I found this in a dumpster, but I guess no one actually has to know that right?

Right????

[color=red]
Sell Value: $???
Type: ???
[/color]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPreviewSprite" type="Sprite" parent="ItemPreview"]
position = Vector2( 206.66, 188.295 )

[node name="ItemName" type="Label" parent="ItemPreview"]
margin_left = 16.991
margin_top = 1.66284
margin_right = 387.991
margin_bottom = 68.6628
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.780392, 0.780392, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StupidBlocker" type="ColorRect" parent="."]
visible = false
margin_right = 1147.0
margin_bottom = 659.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="InventoryItemList" to="." method="_on_InventoryItemList_item_activated"]
[connection signal="item_selected" from="InventoryItemList" to="." method="_on_InventoryItemList_item_selected"]
[connection signal="nothing_selected" from="InventoryItemList" to="." method="_on_InventoryItemList_nothing_selected"]
